Update ja-gettingstarted.md
Former-commit-id: ec41326a8b27353a1fc1aceefa1a73d6595b125e